RG-1870 fixup for select popup loader align
Fixup for 6dd8efd7e764e5cbe97a66719bfeb75b1bf008e1

--- a/components/select/select-popup.css
+++ b/components/select/select-popup.css
@@ -48,6 +48,8 @@
 }
 
 .message {
+  display: inline-block;
+
   margin: unit 0;
   padding: 0 calc(2 * unit);
 }
